--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .background {
 	width:100%;
-	height:100%;
+	height:370px;
 	background-color: #eef3f5;
 	padding-top:5px;
 
@@ -36,6 +36,8 @@
 
 }
 
+
+
 .navigationbar ul {
 
   position: relative;
@@ -66,7 +68,26 @@
 
 .container
 {
+    width: 1060px;
+    height :auto;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-left: 30px;
+    background-color: white; 
+    
+    
+}
+
+.logo
+{
+    background-color: green;
     width: 100%;
+    
+}
+
+.colour{
+    background-color: green;
+    padding-bottom: 30px
 }
 
 .mainform
@@ -78,6 +99,9 @@
     padding-bottom: 1px;
 }
 
+
+
+
 input
 {
     border-style: solid;
@@ -87,4 +111,49 @@ input
     color: #848482;
     border-style: solid;
     border-color: #E5E4E2;
+}
+
+//
+
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+    
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 5.0%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+
+/*  GRID OF FOUR  */
+.span_4_of_4 {
+	width: 100%;
+    
+}
+.span_3_of_4 {
+	width: 73.75%;
+}
+.span_2_of_4 {
+	width: 47.5%;
+}
+.span_1_of_4 {
+	width: 21.25%;
+}
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+	.span_1_of_4, .span_2_of_4, .span_3_of_4, .span_4_of_4 { width: 100%; }
 }
