--- a/styleXbox.css
+++ b/styleXbox.css
@@ -16,7 +16,7 @@
 .product {
 	margin-bottom: 10px;
 	height: 100px;
-	background: darkblue;
+	background: green;
 	padding: 10px;
 	border: 1px solid #DDD;
 	border-radius: 5px;
